--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   ],
   "author": "",
   "license": "ISC",
+    "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "devDependencies": {
     "@types/node": "^14.0.14",
     "ts-node-dev": "^1.0.0-pre.50",
