--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,9 +13,9 @@ jobs:
           node-version: 12
           registry-url: https://npm.pkg.github.com/
           scope: '@cade-tecnologia'
-      - run: npm i
+      - run: yarn install
       - run: git config --global user.email "$GITHUB_ACTOR@users.noreply.github.com" && git config --global user.name "$GITHUB_ACTOR"
-      - run: npm version patch -m "Upgrade version"
+      - run: yarn version --patch
       - run: git push --tags && git push
       - run: npm publish
         env:
