--- a/package.json
+++ b/package.json
@@ -5,23 +5,33 @@
   "files": [
     "/build/**/*"
   ],
+  "main": "build/index.js",
   "scripts": {
     "build": "rm -rf ./build && tsc",
-    "prepare": "npm run build"
+    "prepare": "npm run build",
+    "test": "jest --collect-coverage"
   },
   "keywords": [
     "cade",
     "@cade",
     "cade onibus"
   ],
+
   "author": "",
   "license": "ISC",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.3",
+    "@types/lodash": "^4.14.157",
     "@types/node": "^14.0.14",
+    "jest": "^26.1.0",
+    "ts-jest": "^26.1.1",
     "ts-node-dev": "^1.0.0-pre.50",
     "typescript": "^3.9.6"
+  },
+  "dependencies": {
+    "lodash": "^4.17.15"
   }
 }
