--- a/tsconfig.json
+++ b/tsconfig.json
@@ -74,5 +74,5 @@
   "include": [
     "src/**/*.ts"
   ],
-  "exclude": ["node_modules", "build"]
+  "exclude": ["node_modules", "build", "src/test", "coverage"]
 }
