--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
   "name": "@cade-tecnologia/essentials",
   "version": "1.0.5",
-  "types": "./dist/**/*.d.ts",
-  "files": [
-    "/dist/**/*"
-  ],
-  "main": "dist/index.js",
+  "types": "./dist/index.d.ts",
+  "main": "./dist/index.js",
   "scripts": {
     "build": "rm -rf ./dist && tsc",
     "prepare": "npm run build",
