--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.6",
   "types": "./dist/index.d.ts",
   "main": "./dist/index.js",
+  "files": [
+    "dist/**/*"
+  ],
   "scripts": {
     "build": "rm -rf ./dist && tsc",
     "prepare": "npm run build",
