--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run delete-cache"
+      "post-commit": "npm run delete-cache"
     }
   },
   "keywords": [
