--- a/package.json
+++ b/package.json
@@ -27,12 +27,20 @@
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
   },
+  "peerDependencies": {
+    "axios": "^0.19.2",
+    "axios-observable": "^1.1.3",
+    "rxjs": "^6.6.2"
+  },
   "devDependencies": {
     "@types/jest": "^26.0.3",
     "@types/lodash": "^4.14.157",
     "@types/node": "^14.0.14",
+    "axios": "^0.19.2",
+    "axios-observable": "^1.1.3",
     "husky": "^4.2.5",
     "jest": "^26.1.0",
+    "rxjs": "^6.6.2",
     "ts-jest": "^26.1.1",
     "ts-node-dev": "^1.0.0-pre.50",
     "typescript": "^3.9.6"
